--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,19 @@ files_for_charge_comparison/*
 files_from_rcsb/files_for_charge_comparison/*
 images/*
 *.pdbqt
+*.tpr
+*.gro
+*.log
+*.edr
+*.tpr
+*.tpr.*
+*.trr
+*.xvg
+*.cpt
+*.xtc
+*.xtc.*
+mdout*
+*.top
+*.top.*
+*.itp
 
