--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 files_for_docking/*
 box_size/*
+autodock/*
 *no_torsion*
 files_for_charge_comparison/*
 files_from_rcsb/files_for_charge_comparison/*
