--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,5 @@ GROMACS/water_model_effect/*/gromos53a6_hsd.ff
 GROMACS/water_model_effect/gro_*
 GROMACS/water_model_effect/tmp_RMSDS.txt
 shared_receptors/*/*grid.conf
+shared_receptors/*/results.txt
 
